--- a/Clusterizer/Clusterizer.csproj
+++ b/Clusterizer/Clusterizer.csproj
@@ -69,6 +69,7 @@
     </Compile>
     <Compile Include="ClusterPair.cs" />
     <Compile Include="Clusters.cs" />
+    <Compile Include="ColorGenerator.cs" />
     <Compile Include="CSFContainer.cs" />
     <Compile Include="CSVData.cs" />
     <Compile Include="CSVRow.cs" />
@@ -97,6 +98,15 @@
     <Compile Include="PatternMatrix.cs" />
     <Compile Include="Program.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
+    <Compile Include="Settings.cs" />
+    <Compile Include="StatisticsForm.cs">
+      <SubType>Form</SubType>
+    </Compile>
+    <Compile Include="StatisticsForm.Designer.cs">
+      <DependentUpon>StatisticsForm.cs</DependentUpon>
+    </Compile>
+    <Compile Include="TmpIndex.cs" />
+    <Compile Include="Tools.cs" />
     <EmbeddedResource Include="AboutBox.resx">
       <DependentUpon>AboutBox.cs</DependentUpon>
     </EmbeddedResource>
@@ -122,6 +132,10 @@
       <DependentUpon>Resources.resx</DependentUpon>
       <DesignTime>True</DesignTime>
     </Compile>
+    <EmbeddedResource Include="StatisticsForm.resx">
+      <DependentUpon>StatisticsForm.cs</DependentUpon>
+    </EmbeddedResource>
+    <None Include="ClassDiagram1.cd" />
     <None Include="Properties\Settings.settings">
       <Generator>SettingsSingleFileGenerator</Generator>
       <LastGenOutput>Settings.Designer.cs</LastGenOutput>
