--- a/Clusterizer/Clusterizer.csproj
+++ b/Clusterizer/Clusterizer.csproj
@@ -68,11 +68,10 @@
       <DependentUpon>ClusterizeForm.cs</DependentUpon>
     </Compile>
     <Compile Include="ClusterPair.cs" />
-    <Compile Include="Clusters.cs" />
-    <Compile Include="ColorGenerator.cs" />
-    <Compile Include="CSFContainer.cs" />
+    <Compile Include="ClusterSet.cs" />
     <Compile Include="CSVData.cs" />
     <Compile Include="CSVRow.cs" />
+    <Compile Include="CustomException.cs" />
     <Compile Include="DendogramForm.cs">
       <SubType>Form</SubType>
     </Compile>
@@ -88,16 +87,14 @@
       <DependentUpon>MainForm.cs</DependentUpon>
     </Compile>
     <Compile Include="Node.cs" />
-    <Compile Include="OpenForm.cs">
-      <SubType>Form</SubType>
-    </Compile>
-    <Compile Include="OpenForm.Designer.cs">
-      <DependentUpon>OpenForm.cs</DependentUpon>
-    </Compile>
-    <Compile Include="Pattern.cs" />
-    <Compile Include="PatternMatrix.cs" />
+    <Compile Include="DataPoint.cs" />
     <Compile Include="Program.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
+    <Compile Include="Properties\Resources.Designer.cs">
+      <AutoGen>True</AutoGen>
+      <DesignTime>True</DesignTime>
+      <DependentUpon>Resources.resx</DependentUpon>
+    </Compile>
     <Compile Include="Settings.cs" />
     <Compile Include="StatisticsForm.cs">
       <SubType>Form</SubType>
@@ -105,7 +102,6 @@
     <Compile Include="StatisticsForm.Designer.cs">
       <DependentUpon>StatisticsForm.cs</DependentUpon>
     </Compile>
-    <Compile Include="TmpIndex.cs" />
     <Compile Include="Tools.cs" />
     <EmbeddedResource Include="AboutBox.resx">
       <DependentUpon>AboutBox.cs</DependentUpon>
@@ -119,19 +115,11 @@
     <EmbeddedResource Include="MainForm.resx">
       <DependentUpon>MainForm.cs</DependentUpon>
     </EmbeddedResource>
-    <EmbeddedResource Include="OpenForm.resx">
-      <DependentUpon>OpenForm.cs</DependentUpon>
-    </EmbeddedResource>
     <EmbeddedResource Include="Properties\Resources.resx">
       <Generator>ResXFileCodeGenerator</Generator>
-      <LastGenOutput>Resources.Designer.cs</LastGenOutput>
       <SubType>Designer</SubType>
+      <LastGenOutput>Resources.Designer.cs</LastGenOutput>
     </EmbeddedResource>
-    <Compile Include="Properties\Resources.Designer.cs">
-      <AutoGen>True</AutoGen>
-      <DependentUpon>Resources.resx</DependentUpon>
-      <DesignTime>True</DesignTime>
-    </Compile>
     <EmbeddedResource Include="StatisticsForm.resx">
       <DependentUpon>StatisticsForm.cs</DependentUpon>
     </EmbeddedResource>
@@ -150,94 +138,56 @@
     <None Include="App.config" />
   </ItemGroup>
   <ItemGroup>
-    <None Include="Resources\baseline_folder_open_black_48dp.png" />
-  </ItemGroup>
-  <ItemGroup>
-    <None Include="Resources\baseline_close_black_48dp.png" />
-  </ItemGroup>
-  <ItemGroup>
-    <None Include="Resources\baseline_exit_to_app_black_48dp.png" />
-  </ItemGroup>
-  <ItemGroup>
-    <None Include="Resources\baseline_info_black_48dp.png" />
-  </ItemGroup>
-  <ItemGroup>
-    <None Include="Resources\baseline_add_box_black_48dp.png" />
-  </ItemGroup>
-  <ItemGroup>
-    <None Include="Resources\baseline_edit_black_48dp.png" />
-  </ItemGroup>
-  <ItemGroup>
-    <None Include="Resources\baseline_delete_black_48dp.png" />
-  </ItemGroup>
-  <ItemGroup>
-    <None Include="Resources\baseline_filter_black_48dp.png" />
-  </ItemGroup>
-  <ItemGroup>
-    <None Include="Resources\baseline_tune_black_48dp.png" />
-  </ItemGroup>
-  <ItemGroup>
-    <None Include="Resources\baseline_insert_chart_black_48dp.png" />
-  </ItemGroup>
-  <ItemGroup>
-    <None Include="Resources\baseline_find_in_page_black_48dp.png" />
-  </ItemGroup>
-  <ItemGroup>
-    <None Include="Resources\baseline_sort_by_alpha_black_48dp.png" />
-  </ItemGroup>
-  <ItemGroup>
-    <None Include="Resources\baseline_undo_black_48dp.png" />
-  </ItemGroup>
-  <ItemGroup>
-    <None Include="Resources\baseline_save_black_48dp.png" />
-  </ItemGroup>
-  <ItemGroup>
-    <None Include="Resources\baseline_add_box_black_48dp1.png" />
+    <None Include="Resources\baseline_folder_open_black_48dp1.png" />
   </ItemGroup>
   <ItemGroup>
     <None Include="Resources\baseline_close_black_48dp1.png" />
   </ItemGroup>
   <ItemGroup>
-    <None Include="Resources\baseline_delete_black_48dp1.png" />
-  </ItemGroup>
-  <ItemGroup>
-    <None Include="Resources\baseline_edit_black_48dp1.png" />
-  </ItemGroup>
-  <ItemGroup>
     <None Include="Resources\baseline_exit_to_app_black_48dp1.png" />
-  </ItemGroup>
-  <ItemGroup>
-    <None Include="Resources\baseline_filter_black_48dp1.png" />
-  </ItemGroup>
-  <ItemGroup>
-    <None Include="Resources\baseline_find_in_page_black_48dp1.png" />
-  </ItemGroup>
-  <ItemGroup>
-    <None Include="Resources\baseline_folder_open_black_48dp1.png" />
   </ItemGroup>
   <ItemGroup>
     <None Include="Resources\baseline_info_black_48dp1.png" />
   </ItemGroup>
   <ItemGroup>
-    <None Include="Resources\baseline_insert_chart_black_48dp1.png" />
+    <None Include="Resources\baseline_add_box_black_48dp1.png" />
   </ItemGroup>
   <ItemGroup>
-    <None Include="Resources\baseline_save_black_48dp1.png" />
+    <None Include="Resources\baseline_edit_black_48dp1.png" />
   </ItemGroup>
   <ItemGroup>
-    <None Include="Resources\baseline_sort_by_alpha_black_48dp1.png" />
+    <None Include="Resources\baseline_delete_black_48dp1.png" />
+  </ItemGroup>
+  <ItemGroup>
+    <None Include="Resources\baseline_filter_black_48dp1.png" />
   </ItemGroup>
   <ItemGroup>
     <None Include="Resources\baseline_tune_black_48dp1.png" />
   </ItemGroup>
   <ItemGroup>
+    <None Include="Resources\baseline_insert_chart_black_48dp1.png" />
+  </ItemGroup>
+  <ItemGroup>
+    <None Include="Resources\baseline_find_in_page_black_48dp1.png" />
+  </ItemGroup>
+  <ItemGroup>
+    <None Include="Resources\baseline_sort_by_alpha_black_48dp1.png" />
+  </ItemGroup>
+  <ItemGroup>
     <None Include="Resources\baseline_undo_black_48dp1.png" />
+  </ItemGroup>
+  <ItemGroup>
+    <None Include="Resources\baseline_save_black_48dp1.png" />
   </ItemGroup>
   <ItemGroup>
     <None Include="Resources\baseline_grain_black_48dp.png" />
   </ItemGroup>
   <ItemGroup>
     <Content Include="baseline_grain_black_48dp.ico" />
+    <None Include="Resources\baseline_group_work_black_48dp.png" />
+    <None Include="Resources\baseline_flip_to_front_black_48dp.png" />
+    <None Include="Resources\baseline_search_black_18dp.png" />
+    <None Include="Resources\baseline_redo_black_48dp.png" />
   </ItemGroup>
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
 </Project>
